# slack-message

./: .gitignore  .rustfmt.toml  Cargo.toml  README.MD  README.md  config.toml  justfile
.cargo/: config.toml
.github/workflows/: release.yaml
src/: cli.rs  config.rs  globals.rs  main.rs
src/slack/: mod.rs  response.rs
tests/: bad_test_config.toml  integration.rs
